--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <!-- Container dos Textos -->
         <div style="margin-left: 144px">  
 
-            <h1>Quem Somos</h1> <!-- h1: título -->
+            <h1 class="titulo-principal">Quem Somos</h1> <!-- h1: título -->
 
             <!-- Container do Slogan -->
             <div style="display:flex ; margin-top: 36px;"> 
@@ -43,7 +43,7 @@
                 <p class="sobre-slogan">Os melhores planos de seguros com preços que cabem no seu orçamento.</p>            
             </div>
 
-            <p class="sobre-descricao">
+            <p class="descricao">
             Procuramos atender nossos segurados transmitindo a segurança que os mesmos precisam, acompanhando-os 
             sempre durante a vigência da apólice. Buscamos a satisfação e credibilidade junto aos nossos clientes, 
             levando aos mesmos o melhor custo x benefício na contratação do seu seguro.
@@ -59,8 +59,16 @@
     </div>
 
     <!-- Objetivos -->
-    <div class="objetivos-container">
-
+    <div class="objetivos-container"; style="padding-top:32px; padding-bottom: 32px;">
+        <h1 style="font-family: Scada; font-size: 48px; text-align: center;">Nosso Objetivo</h1>
+        <div style="display: flex; justify-content: center; align-items: center;">
+            <img style="height: 320px; margin-left: 180px; margin-right: 180px;" src="./resources/img/img.objetivo.svg">
+            <p class="descricao" style="margin-right: 144px;"> 
+                Estabelecer parcerias com nossos clientes nas contratações junto com as companhias de seguros 
+                maiores e mais solicitadas no mercado - que oferecem custos adequados, efetiva liquidez e 
+                comprovada agilidade no pagamento do sinistro.
+            </p>
+        </div>
     </div>
 
 </body> 
