--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Barra de Navegação: Lays -->
     <header class="navbar"> <!-- div: divisão, container, caixa -->
 
-        <img class="logo" src="./resources/img/logo.png"> <!-- img: imagens -->
+        <img class="logo" src="./resources/icons/icone.logo.svg"> <!-- img: imagens -->
         <span class="logo-extensao">Seguros</span> <!-- span: trecho de um elemento -->
         <a class="botao1" href="">Serviços</a> <!-- a: links-->
         <a class="botao2" href="#caixa">Contato</a>
@@ -53,21 +53,25 @@
 
         <!-- Container da Logo -->
         <div>
-            <img style="height: 400px; margin-right: 144px; margin-left: 96px ; " src="./resources/img/logo.png">
+            <img style="height: 400px; margin-right: 144px; margin-left: 96px ; " src="./resources/img/img.logo.svg">
         </div>
 
     </div>
 
     <!-- Objetivos -->
-    <div class="objetivos-container"; style="padding-top:32px; padding-bottom: 32px;">
+    <div class="objetivos-container">
         <h1 style="font-family: Scada; font-size: 48px; text-align: center;">Nosso Objetivo</h1>
         <div style="display: flex; justify-content: center; align-items: center;">
-            <img style="height: 320px; margin-left: 180px; margin-right: 180px;" src="./resources/img/img.objetivo.svg">
-            <p class="descricao" style="margin-right: 144px;"> 
-                Estabelecer parcerias com nossos clientes nas contratações junto com as companhias de seguros 
-                maiores e mais solicitadas no mercado - que oferecem custos adequados, efetiva liquidez e 
-                comprovada agilidade no pagamento do sinistro.
-            </p>
+            <div>
+                <img style="margin-left: 144px; width: 440px; position: absolute; bottom: 0px; " src="./resources/img/img.objetivo.svg">
+            </div>
+            <div>
+                <p class="descricao" style="margin-right: 144px; margin-left: 33%"> 
+                    Estabelecer parcerias com nossos clientes nas contratações junto com as companhias de seguros 
+                    maiores e mais solicitadas no mercado - que oferecem custos adequados, efetiva liquidez e 
+                    comprovada agilidade no pagamento do sinistro.
+                </p>
+            </div>
         </div>
     </div>
 
