Style: contact us

--- a/index.html
+++ b/index.html
@@ -74,6 +74,29 @@
             </div>
         </div>
     </div>
+    <!--Com quem trabalhamos-->
+    <div>
 
+    </div>
+    <!--Fale conosco-->
+    <div class="fale-conosco" style="display: flex;align-items: center">
+        <div style="justify-content: center;margin-left: 144px;">
+            <h1 class="titulo-principal"> Fale Conosco </h1>
+            <p class="descricao" style="">
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry.<br> 
+                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s
+            </p>
+        </div>
+        <div style="justify-content: center; margin-left: 96px;">
+            <form>
+                <input class="input" type="text" placeholder="Digite o seu nome"><br>
+                <input class="input" type="email"placeholder="Digite o seu e-mail"><br>
+                
+                <button class="botao1" style="width: 316px; height: 72px; border-radius: 30px; font-size: 32px;" type="submit">
+                    Submeter
+                </button>
+            </form>
+        </div>
+    </div>
 </body> 
 </html> 
