style(services page): layout adjustments

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
             Nosso Objetivo
         </h1>
         <div style="display: flex; justify-content: center; align-items: center;">
-            <div>
-                <img style="margin-left: 144px; width: 440px; position: absolute; bottom: 0px; " src="./resources/img/img.objetivo.svg">
+            <div style="position: relative">
+                <img style="margin-left: 144px; width: 440px; position: absolute; bottom: -196px; " src="./resources/img/img.objetivo.svg">
             </div>
             <div>
                 <p class="descricao" style="margin-right: 144px; margin-left: 33%"> 
@@ -79,21 +79,21 @@
 
     </div>
 
-    <!--Fale conosco-->
+    <!--Fale Conosco-->
     <div id=fale-conosco class="contato-container" style="display: flex;align-items: center; height: 480px;">
         <div style="justify-content: center;margin-left: 144px;">
             <h1 class="titulo-principal"> Fale Conosco </h1>
-            <p class="descricao" style="">
+            <p class="descricao">
                 Lorem Ipsum is simply dummy text of the printing and typesetting industry.<br> 
                 Lorem Ipsum has been the industry's standard dummy text ever since the 1500s
             </p>
         </div>
-        <div style="justify-content: center; margin-left: 96px;  margtext-align: center;">
+        <div style="justify-content: center; margin-left: 96px; text-align: center;">
             <form>
                 <input class="input" type="text" placeholder="Digite o seu nome"><br>
                 <input class="input" type="email"placeholder="Digite o seu e-mail"><br>
                 
-                <button class="botao1" style="width: 316px; height: 64px; border-radius: 30px; font-size: 32px;" type="submit">
+                <button class="botao1" style="width: 316px; height: 64px; border-radius: 30px; font-size: 32px; padding-top: 0px;" type="submit">
                     Submeter
                 </button>
             </form>
