--- a/services.html
+++ b/services.html
@@ -10,18 +10,132 @@
 </head>
 <body>
 
+<header class="navbar">
+    <div style="display: flex; align-items: center">
+        <img class="logo" src="./resources/icons/icone.logo.svg">
+        <span class="logo-extensao">Seguros</span>
+    </div>
+    <div style="display: flex; align-items: center">
+        <a class="botao1" style="padding: 0" href="./index.html">Início</a>
+        <a class="botao2" style="padding: 0; margin: 0px 20px 0px 20px;" href="#fale-conosco">Contato</a>
+
+        <img class="icone"src="./resources/icons/icone.facebook.svg">
+        <img class="icone"src="./resources/icons/icone.instagram.svg">
+        <img class="icone"src="./resources/icons/icone.whatsapp.svg">
+    </div>
+</header>
+
 <!--Nossos Serviços-->  
-<div style="background-color: #2A2A2A; width: 100%;padding-top: 32px;padding-bottom: 32px;color: #FAFAFA"> <!--Título-->
-    <h1 style="font-family: Scada; font-size: 48px; margin-left: 144px;"> Nossos Serviços </h1>
+<div style="background-color: #2A2A2A; width: 100%; padding: 24px 0 24px 0;"> <!--Título-->
+    <h1 style="font-family: Scada; font-size: 32px; margin-left: 144px; color: #FAFAFA"> Nossos Serviços </h1>
 </div>
 
 <!----------------------------------------------------------------------------------------------------->
 <!--Seguro de vida-->
-<div class="servicos-container" style="display: flex; justify-content: center;">            
-    <div style="margin-left: 144px; padding-top: 24px;">
-        <h1 class="servicos-titulo">
-                Seguro de Vida
-        </h1>
+<div class="servicos-container">            
+    <div style="margin-left: 144px; padding-top: 24px; margin-right: 16px;">
+        <h1 class="servicos-titulo">Seguro de Vida</h1>
+        <p class="servicos-descricao">
+            Cuide de quem você ama e tenha benefícios na vida. Aproveitar os bons momentos ao lado de quem 
+            é especial para você é uma das melhores coisas da vida. Para isso, ter um seguro de vida ou 
+            acidentes pessoais é essencial.
+        </p>
+        <div style="display: flex; padding-top: 32px; justify-content: end;">
+            <a class="botao1" style="width: 196px;" href="">
+                Saber Mais
+            </a>
+
+            <a class="botao2" style="width: 196px; margin-left: 24px;" href="">
+                Contratar Agora
+            </a>
+        </div>
+    </div>
+    <div style>
+        <img src="./resources/img/img.seguro-vida.svg" style="width: 544px; margin-right: 144px;">
+    </div>
+</div>
+
+<!----------------------------------------------------------------------------------------------------->
+<!--Seguro de Equipamentos-->
+<div class="servicos-container" style="background-color: #cca700;">            
+    <div>
+        <img src="./resources/img/img.seguro-equipamentos.svg" style="width: 544px; margin-left: 144px;">
+    </div>
+    <div style="margin-right: 144px; padding-top: 24px;">
+        <div>
+            <h1 class="servicos-titulo">Seguro de Equipamentos</h1>
+            <p class="servicos-descricao">
+                Seu patrimônio protegido e sua família com a certeza de que o lar não faltará. Cobrem mais de 15 eventos, 
+                incluindo danos elétricos e roubo. Dentre os diversos planos temos até sem vistoria. Conta com assistência 
+                24 horas, que garantem chaveiro, mão de obra especializada entre outros.
+            </p>
+        </div>
+        <div style="display: flex; padding-top: 32px; justify-content: end;">
+            <a class="botao1" style="width: 196px;" href="">
+                Saber Mais
+            </a>
+            <a class="botao2" style="width: 196px; margin-left: 24px;">
+                Contratar Agora
+            </a>
+        </div>
+    </div>
+</div>
+
+<!----------------------------------------------------------------------------------------------------->
+<!--Seguro de Automóveis-->
+<div class="servicos-container">            
+    <div style="margin-left: 144px; padding-top: 24px; margin-right: 16px;">
+        <h1 class="servicos-titulo">Seguro Veícular</h1>
+        <p class="servicos-descricao">
+            Visa passar tranquilidade com seu carro. Existem planos flexíveis que vão sempre se adequar a sua necessidade. 
+            Coberturas: colisão, incêndio, roubo/furto. Indenizações: danos materiais e corporais, causados a terceiros 
+            (sejam eles passageiros do seu veículo ou não).
+        </p>
+        <div style="display: flex; padding-top: 32px; justify-content: end;">
+            <a class="botao1" style="width: 196px;" href="">
+                Saber Mais
+            </a>
+            <a class="botao2" style="width: 196px; margin-left: 24px;" href="">
+                Contratar Agora
+            </a>
+        </div>
+    </div>
+    <div>
+        <img src="./resources/img/img.seguro-veicular.svg" style="width: 544px; margin-right: 144px;">
+    </div>
+</div>
+
+<!----------------------------------------------------------------------------------------------------->
+<!--Seguro Empresárial-->
+<div class="servicos-container" style="background-color: #cca700;">            
+    <div style="">
+        <img src="./resources/img/img.seguro-empresarial.svg" style="width: 360px; margin-left: 144px;">
+    </div>
+    <div style="margin-right: 176px; padding-top: 24px; margin-left: 32px;">
+        <div>
+            <h1 class="servicos-titulo">Seguro Empresarial</h1>
+            <p class="servicos-descricao">
+                Proteja sua empresa de imprevistos e riscos. Coberturas: incêndio, raio, explosão, vendaval, fumaça, 
+                danos elétricos, roubo, lucros cessantes, valores, vidros e anúncios luminosos, equipamentos eletrônicos 
+                entre outros. Assim, sua empresa pode contar com assistência 24 horas.    
+            </p>
+        </div>
+        <div style="display: flex; padding-top: 32px; justify-content: end;">
+            <a class="botao1" style="width: 196px;" href="">
+                Saber Mais
+            </a>
+            <a class="botao2" style="width: 196px; margin-left: 24px;" href="">
+                Contratar Agora
+            </a>
+        </div>
+    </div>
+</div>
+
+<!----------------------------------------------------------------------------------------------------->
+<!--Seguro Residencial-->
+<div class="servicos-container"">            
+    <div style="margin-left: 176px; padding-top: 24px; margin-right: 32px;">
+        <h1 class="servicos-titulo">Seguro Residencial</h1>
         <p class="servicos-descricao">
                 In sed sagittis est, vel ultricies massa. Nulla a tincidunt ex, non porttitor ex.
                 Aliquam enim turpis, tristique sed risus quis, gravida pharetra mauris.Sed sodales 
@@ -31,131 +145,10 @@
                 cursus.
         </p>
         <div style="display: flex; padding-top: 32px; justify-content: end;">
-            <a class="botao1" style="width: 196px; height: 40px;" href="">
+            <a class="botao1" style="width: 196px;" href="">
                 Saber Mais
             </a>
-
-            <a class="botao2" style="width: 196px; height: 40px; margin-left: 24px;" href="">
-                Contratar Agora
-            </a>
-        </div>
-    </div>
-    <div style="">
-        <img src="./resources/img/img.seguro-vida.svg" style="width: 440px; margin-right: 144px;">
-    </div>
-</div>
-
-<!----------------------------------------------------------------------------------------------------->
-<!--Seguro de Equipamentos-->
-<div class="servicos-container" style="display: flex; justify-content: center; background-color: #cca700;">            
-    <div style="">
-        <img src="./resources/img/img.seguro-equipamentos.svg" style="width: 440px; margin-left: 144px;">
-    </div>
-    <div style="margin-right: 144px; padding-top: 24px;">
-        <div style="">
-            <h1 class="servicos-titulo">
-                    Seguro de Equipamentos
-            </h1>
-            <p class="servicos-descricao">
-                    In sed sagittis est, vel ultricies massa. Nulla a tincidunt ex, non porttitor ex.
-                    Aliquam enim turpis, tristique sed risus quis, gravida pharetra mauris.Sed sodales 
-                    metus eu nulla feugiat, sed ultricies neque tristique. Aenean efficitur molestie 
-                    libero, rhoncus fermentum odio vestibulum a. Nullam sem tellus, elementum a porta 
-                    eu, fermentum in risus. Etiam ultrices mauris est, a scelerisque tortor consectetur 
-                    cursus.
-            </p>
-        </div>
-        <div style="padding-top: 32px; margin-left: 540px; justify-content: end;">
-            <a class="botao1" style="width: 196px; height: 40px;" href="">
-                Saber Mais
-            </a>
-            <a class="botao2" style="width: 196px; height: 40px; margin-left: 24px;">
-                Contratar Agora
-            </a>
-        </div>
-    </div>
-</div>
-
-<!----------------------------------------------------------------------------------------------------->
-<!--Seguro de Automóveis-->
-<div class="servicos-container" style="display: flex; justify-content: center;">            
-    <div style="margin-left: 144px; padding-top: 24px;">
-        <h1 class="servicos-titulo">
-                        Seguro Veícular
-        </h1>
-        <p class="servicos-descricao">
-            In sed sagittis est, vel ultricies massa. Nulla a tincidunt ex, non porttitor ex.
-            Aliquam enim turpis, tristique sed risus quis, gravida pharetra mauris.Sed sodales 
-            metus eu nulla feugiat, sed ultricies neque tristique. Aenean efficitur molestie 
-            libero, rhoncus fermentum odio vestibulum a. Nullam sem tellus, elementum a porta 
-            eu, fermentum in risus. Etiam ultrices mauris est, a scelerisque tortor consectetur 
-            cursus.
-        </p>
-        <div style="padding-top: 32px; margin-left: 540px; justify-content: end;">
-            <a class="botao1" style="width: 196px; height: 40px;" href="">
-                Saber Mais
-            </a>
-            <a class="botao2" style="width: 196px; height: 40px; margin-left: 24px;" href="">
-                Contratar Agora
-            </a>
-        </div>
-    </div>
-    <div style="">
-        <img src="./resources/img/img.seguro-veicular.svg" style="width: 440px; margin-right: 144px;">
-    </div>
-</div>
-
-<!----------------------------------------------------------------------------------------------------->
-<!--Seguro Empresárial-->
-<div class="servicos-container" style="display: flex; justify-content: center; background-color: #cca700;">            
-    <div style="">
-        <img src="./resources/img/img.seguro-empresarial.svg" style="width: 360px; margin-left: 144px;">
-    </div>
-    <div style="margin-right: 144px; padding-top: 24px;">
-        <div style="">
-            <h1 class="servicos-titulo">
-                    Seguro Empresarial
-            </h1>
-            <p class="servicos-descricao">
-                    In sed sagittis est, vel ultricies massa. Nulla a tincidunt ex, non porttitor ex.
-                    Aliquam enim turpis, tristique sed risus quis, gravida pharetra mauris.Sed sodales 
-                    metus eu nulla feugiat, sed ultricies neque tristique. Aenean efficitur molestie 
-                    libero, rhoncus fermentum odio vestibulum a. Nullam sem tellus, elementum a porta 
-                    eu, fermentum in risus. Etiam ultrices mauris est, a scelerisque tortor consectetur 
-                    cursus.
-            </p>
-        </div>
-        <div style="padding-top: 32px; margin-left: 540px; justify-content: end;">
-            <a class="botao1" style="width: 196px; height: 40px;" href="">
-                Saber Mais
-            </a>
-            <a class="botao2" style="width: 196px; height: 40px; margin-left: 24px;" href="">
-                Contratar Agora
-            </a>
-        </div>
-    </div>
-</div>
-
-<!----------------------------------------------------------------------------------------------------->
-<!--Seguro Residencial-->
-<div class="servicos-container" style="display: flex; justify-content: center;">            
-    <div style="margin-left: 144px; padding-top: 24px;">
-        <h1 class="servicos-titulo">
-                Seguro Residencial
-        </h1>
-        <p class="servicos-descricao">
-                In sed sagittis est, vel ultricies massa. Nulla a tincidunt ex, non porttitor ex.
-                Aliquam enim turpis, tristique sed risus quis, gravida pharetra mauris.Sed sodales 
-                metus eu nulla feugiat, sed ultricies neque tristique. Aenean efficitur molestie 
-                libero, rhoncus fermentum odio vestibulum a. Nullam sem tellus, elementum a porta 
-                eu, fermentum in risus. Etiam ultrices mauris est, a scelerisque tortor consectetur 
-                cursus.
-        </p>
-        <div style="padding-top: 32px; margin-left: 540px; justify-content: end;">
-            <a class="botao1" style="width: 196px; height: 40px;" href="">
-                Saber Mais
-            </a>
-            <a class="botao2" style="width: 196px; height: 40px; margin-left: 24px;" href="">
+            <a class="botao2" style="width: 196px; margin-left: 24px;" href="">
                 Contratar Agora
             </a>
         </div>
